--- a/index.html
+++ b/index.html
@@ -6,30 +6,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
-      font-family: Arial, sans-serif;
-      margin: 40px;
+      margin: 0;
+      padding: 0;
       background: #f9f9f9;
-      color: #333;
-    }
-    h1 {
-      color: #004578;
+      display: flex;
+      justify-content: center;
     }
     .dashboard-container {
-      margin-top: 40px;
+      margin: 40px auto;
+      max-width: 1200px;
     }
   </style>
 </head>
 <body>
-  <h1>Welcome to Your ROI360 Client Dashboard</h1>
-  <p>This embedded view provides your custom Tableau dashboard insights.</p>
-
-  <div class='dashboard-container'>
+  <div class="dashboard-container">
     <div class='tableauPlaceholder' id='viz1749236864640' style='position: relative'>
       <noscript>
         <a href='#'>
           <img alt='ROI 360 Client Dashboard '
-            src='https://public.tableau.com/static/images/Br/BryanInsightsDashboard/ROI360ClientDashboard/1_rss.png'
-            style='border: none' />
+               src='https://public.tableau.com/static/images/Br/BryanInsightsDashboard/ROI360ClientDashboard/1_rss.png'
+               style='border: none' />
         </a>
       </noscript>
       <object class='tableauViz' style='display:none;'>
@@ -40,7 +36,7 @@
         <param name='tabs' value='no' />
         <param name='toolbar' value='yes' />
         <param name='static_image'
-          value='https://public.tableau.com/static/images/Br/BryanInsightsDashboard/ROI360ClientDashboard/1.png' />
+               value='https://public.tableau.com/static/images/Br/BryanInsightsDashboard/ROI360ClientDashboard/1.png' />
         <param name='animate_transition' value='yes' />
         <param name='display_static_image' value='yes' />
         <param name='display_spinner' value='yes' />
