--- a/index.html
+++ b/index.html
@@ -9,52 +9,67 @@
       margin: 0;
       padding: 0;
       background: #f9f9f9;
-    }
-    .dashboard-container {
-      max-width: 1200px;
-      width: 100%;
-      margin: 40px auto;
       display: flex;
       justify-content: center;
+    }
+    .dashboard-container {
+      margin: 40px auto;
+      max-width: 1200px;
     }
   </style>
 </head>
 <body>
   <div class="dashboard-container">
-    <div class='tableauPlaceholder' id='viz1749236864640' style='position: relative; width: 100%;'>
+    <div class='tableauPlaceholder' id='viz1749236864640' style='position: relative'>
       <noscript>
         <a href='#'>
           <img alt='ROI 360 Client Dashboard '
                src='https://public.tableau.com/static/images/Br/BryanInsightsDashboard/ROI360ClientDashboard/1_rss.png'
-               style='border: none; width: 100%;' />
+               style='border: none' />
         </a>
       </noscript>
-      <object class='tableauViz' style='display:none; width: 100%;'></object>
+      <object class='tableauViz' style='display:none;'>
+        <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+        <param name='embed_code_version' value='3' />
+        <param name='site_root' value='' />
+        <param name='name' value='BryanInsightsDashboard/ROI360ClientDashboard' />
+        <param name='tabs' value='no' />
+        <param name='toolbar' value='yes' />
+        <param name='static_image'
+               value='https://public.tableau.com/static/images/Br/BryanInsightsDashboard/ROI360ClientDashboard/1.png' />
+        <param name='animate_transition' value='yes' />
+        <param name='display_static_image' value='yes' />
+        <param name='display_spinner' value='yes' />
+        <param name='display_overlay' value='yes' />
+        <param name='display_count' value='yes' />
+        <param name='language' value='en-US' />
+      </object>
     </div>
   </div>
 
-  <script type='text/javascript'>
-    const divElement = document.getElementById('viz1749236864640');
-    const vizElement = divElement.getElementsByTagName('object')[0];
-    const windowWidth = window.innerWidth;
+<script type='text/javascript'>
+  const divElement = document.getElementById('viz1749236864640');
+  const vizElement = divElement.getElementsByTagName('object')[0];
+  const windowWidth = window.innerWidth;
 
-    if (windowWidth > 1200) {
-      vizElement.style.width = '1200px';
-      vizElement.style.height = '6227px';
-    } else if (windowWidth > 800) {
-      vizElement.style.width = '1000px';
-      vizElement.style.height = '6000px';
-    } else if (windowWidth > 500) {
-      vizElement.style.width = '100%';
-      vizElement.style.height = '5500px';
-    } else {
-      vizElement.style.width = '100%';
-      vizElement.style.height = '5000px';
-    }
+  if (windowWidth > 1200) {
+    vizElement.style.width = '1200px';
+    vizElement.style.height = '6227px';
+  } else if (windowWidth > 800) {
+    vizElement.style.width = '1000px';
+    vizElement.style.height = '6000px';
+  } else if (windowWidth > 500) {
+    vizElement.style.width = '100%';
+    vizElement.style.height = '5500px';
+  } else {
+    vizElement.style.width = '100%';
+    vizElement.style.height = '5000px';
+  }
 
-    const scriptElement = document.createElement('script');
-    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
-    vizElement.parentNode.insertBefore(scriptElement, vizElement);
-  </script>
+  const scriptElement = document.createElement('script');
+  scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+  vizElement.parentNode.insertBefore(scriptElement, vizElement);
+</script>
+
 </body>
 </html>
