--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <param name='site_root' value='' />
         <param name='name' value='BryanInsightsDashboard/ROI360ClientDashboard' />
         <param name='tabs' value='no' />
-        <param name='toolbar' value='yes' />
+        <param name='toolbar' value='no' />
         <param name='static_image'
                value='https://public.tableau.com/static/images/Br/BryanInsightsDashboard/ROI360ClientDashboard/1.png' />
         <param name='animate_transition' value='yes' />
