--- a/index.html
+++ b/index.html
@@ -4,19 +4,31 @@
   <meta charset="UTF-8">
   <title>ROI360 Client Dashboard</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background: #f9f9f9;
-      display: flex;
-      justify-content: center;
-    }
-    .dashboard-container {
-      margin: 40px auto;
-      max-width: 1200px;
-    }
-  </style>
+<style>
+  body {
+    margin: 0;
+    padding: 0;
+    background: #f9f9f9;
+    display: flex;
+    justify-content: center;
+  }
+  .dashboard-container {
+    margin: 40px auto;
+    max-width: 1200px;
+  }
+  .tableauPlaceholder::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 60px;
+    background: #f9f9f9;
+    z-index: 999;
+    pointer-events: none;
+  }
+</style>
+
 </head>
 <body>
   <div class="dashboard-container">
