--- a/index.html
+++ b/index.html
@@ -12,19 +12,27 @@
     display: flex;
     justify-content: center;
   }
+
   .dashboard-container {
     margin: 40px auto;
     max-width: 1200px;
+    width: 100%;
+    position: relative; /* Required for overlay to work */
   }
+
+  .tableauPlaceholder {
+    position: relative;
+  }
+
   .tableauPlaceholder::after {
     content: "";
     position: absolute;
     bottom: 0;
     left: 0;
+    height: 60px; /* Adjust this if needed */
     width: 100%;
-    height: 60px;
-    background: #f9f9f9;
-    z-index: 999;
+    background-color: #f9f9f9; /* Same as page background */
+    z-index: 10;
     pointer-events: none;
   }
 </style>
