--- a/index.html
+++ b/index.html
@@ -4,85 +4,83 @@
   <meta charset="UTF-8">
   <title>ROI360 Client Dashboard</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<style>
-  body {
-    margin: 0;
-    padding: 0;
-    background: #f9f9f9;
-    display: flex;
-    justify-content: center;
-  }
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background: #f9f9f9;
+      display: flex;
+      justify-content: center;
+    }
 
-  .dashboard-container {
-    margin: 40px auto;
-    max-width: 1200px;
-    width: 100%;
-    position: relative; /* Required for overlay to work */
-  }
+    .dashboard-container {
+      margin: 40px auto;
+      max-width: 1200px;
+      width: 100%;
+      position: relative;
+    }
 
-  .tableauPlaceholder {
-    position: relative;
-  }
+    .tableauPlaceholder {
+      position: relative;
+    }
 
-  .tableauPlaceholder::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    height: 60px; /* Adjust this if needed */
-    width: 100%;
-    background-color: #f9f9f9; /* Same as page background */
-    z-index: 10;
-    pointer-events: none;
-  }
-</style>
-
+    .tableauPlaceholder::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      height: 60px;
+      width: 100%;
+      background-color: #f9f9f9;
+      z-index: 10;
+      pointer-events: none;
+    }
+  </style>
 </head>
 <body>
   <div class="dashboard-container">
-<div class='tableauPlaceholder' id='viz1751394674870' style='position: relative'>
-  <noscript>
-    <a href='#'>
-      <img alt=' ' src='https://public.tableau.com/static/images/Br/BryanInsightsDashboard/ROI360ClientDashboard/1_rss.png' style='border: none' />
-    </a>
-  </noscript>
-  <object class='tableauViz' style='display:none;'>
-    <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
-    <param name='embed_code_version' value='3' />
-    <param name='site_root' value='' />
-    <param name='name' value='BryanInsightsDashboard/ROI360ClientDashboard' />
-    <param name='tabs' value='no' />
-    <param name='toolbar' value='yes' />
-    <param name='static_image' value='https://public.tableau.com/static/images/Br/BryanInsightsDashboard/ROI360ClientDashboard/1.png' />
-    <param name='animate_transition' value='yes' />
-    <param name='display_static_image' value='yes' />
-    <param name='display_spinner' value='yes' />
-    <param name='display_overlay' value='yes' />
-    <param name='display_count' value='yes' />
-    <param name='language' value='en-US' />
-    <param name='filter' value='publish=yes' />
-  </object>
-</div>
-<script type='text/javascript'>
-  var divElement = document.getElementById('viz1751394674870');
-  var vizElement = divElement.getElementsByTagName('object')[0];
+    <div class='tableauPlaceholder' id='viz1751395493243' style='position: relative'>
+      <noscript>
+        <a href='#'>
+          <img alt=' ' src='https://public.tableau.com/static/images/Br/BryanInsightsDashboard/ROI360ClientDashboard/1_rss.png' style='border: none' />
+        </a>
+      </noscript>
+      <object class='tableauViz' style='display:none;'>
+        <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+        <param name='embed_code_version' value='3' />
+        <param name='site_root' value='' />
+        <param name='name' value='BryanInsightsDashboard/ROI360ClientDashboard' />
+        <param name='tabs' value='no' />
+        <param name='toolbar' value='yes' />
+        <param name='static_image' value='https://public.tableau.com/static/images/Br/BryanInsightsDashboard/ROI360ClientDashboard/1.png' />
+        <param name='animate_transition' value='yes' />
+        <param name='display_static_image' value='yes' />
+        <param name='display_spinner' value='yes' />
+        <param name='display_overlay' value='yes' />
+        <param name='display_count' value='yes' />
+        <param name='language' value='en-US' />
+        <param name='filter' value='publish=yes' />
+      </object>
+    </div>
+    <script type='text/javascript'>
+      var divElement = document.getElementById('viz1751395493243');
+      var vizElement = divElement.getElementsByTagName('object')[0];
 
-  if (divElement.offsetWidth > 800) {
-    vizElement.style.width = '1200px';
-    vizElement.style.height = '5626px';
-  } else if (divElement.offsetWidth > 500) {
-    vizElement.style.width = '1200px';
-    vizElement.style.height = '5626px';
-  } else {
-    vizElement.style.width = '100%';
-    vizElement.style.height = '10027px';
-  }
+      if (divElement.offsetWidth > 800) {
+        vizElement.style.width = '1200px';
+        vizElement.style.height = '5626px';
+      } else if (divElement.offsetWidth > 500) {
+        vizElement.style.width = '1200px';
+        vizElement.style.height = '5626px';
+      } else {
+        vizElement.style.width = '100%';
+        vizElement.style.height = '10027px';
+      }
 
-  var scriptElement = document.createElement('script');
-  scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
-  vizElement.parentNode.insertBefore(scriptElement, vizElement);
-</script>
-
-
+      var scriptElement = document.createElement('script');
+      scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+      vizElement.parentNode.insertBefore(scriptElement, vizElement);
+    </script>
+  </div> 
 </body>
 </html>
