--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>ROI360 Client Dashboard</title>
+  <title>ROI360 Sample Dashboard</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
@@ -39,7 +39,7 @@
 </head>
 <body>
   <div class="dashboard-container">
-    <div class='tableauPlaceholder' id='viz1754461637340' style='position: relative'>
+    <div class='tableauPlaceholder' id='viz1754461995040' style='position: relative'>
       <noscript>
         <a href='#'>
           <img alt=' ' src='https://public.tableau.com/static/images/Br/BryanInsightsDashboard/ROI360DashboardSample/1_rss.png' style='border: none' />
